--- a/analiseficha.html
+++ b/analiseficha.html
@@ -824,7 +824,7 @@ const EMAILS_AUTORIZADOS_EXCLUSAO = [
   "leonardo_henrique1@hotmail.com",
   "souzanalbert58@gmail.com",
   "yanequeiroz123@gmail.com",   // 👈 exemplo
-  "gerente@mercattodelicia.com.br"  // 👈 exemplo
+  "annaluisasantos0822@gmail.com"  // 👈 exemplo
 ];
 let usuarioEmailAtual = null;
 
