--- a/relatorios.html
+++ b/relatorios.html
@@ -199,11 +199,11 @@ body{
     </a>
 
     <!-- 6 -->
-    <a href="simulacoes.html" class="card">
+    <a href="caderno.html" class="card">
       <div class="icon">🧠</div>
-      <h3>Simulações de Preço</h3>
-      <p>Simule markup, margem alvo e preço ideal por prato.</p>
-      <span class="badge">PRECIFICAÇÃO</span>
+      <h3>Livro de Receitas</h3>
+      <p>Acesse todas as receitas cadastradas e analise de forma rápida e prática</p>
+      <span class="badge">Caderno</span>
     </a>
 
   </div>
