--- a/historico.html
+++ b/historico.html
@@ -12,6 +12,8 @@
 :root{
   --primary:#2563eb;
   --primary-dark:#1e40af;
+  --danger:#dc2626;
+  --success:#16a34a;
   --bg:#f8fafc;
   --card:#ffffff;
   --text:#0f172a;
@@ -20,9 +22,7 @@
   --radius:22px;
   --shadow:0 20px 50px rgba(0,0,0,.12);
 }
-
 *{box-sizing:border-box}
-
 body{
   margin:0;
   font-family:Inter;
@@ -32,8 +32,6 @@ body{
     var(--bg);
   color:var(--text);
 }
-
-/* HEADER */
 .header{
   padding:26px 22px 10px;
   max-width:1200px;
@@ -49,22 +47,17 @@ body{
   color:var(--muted);
   font-weight:600;
 }
-
-/* CONTAINER */
 .container{
   max-width:1200px;
   margin:auto;
   padding:22px;
 }
-
-/* CARDS RESUMO */
 .grid{
   display:grid;
   grid-template-columns:repeat(4, 1fr);
   gap:20px;
   margin-bottom:25px;
 }
-
 .stat{
   background:var(--card);
   border-radius:var(--radius);
@@ -81,8 +74,6 @@ body{
   font-size:26px;
   font-weight:900;
 }
-
-/* FILTROS */
 .filters{
   background:var(--card);
   padding:18px;
@@ -107,8 +98,9 @@ button{
   font-weight:700;
   cursor:pointer;
 }
-
-/* TABELA */
+.btn-restore{
+  background:var(--danger);
+}
 .table-wrap{
   background:var(--card);
   border-radius:var(--radius);
@@ -139,8 +131,6 @@ th{
 .insert{background:#dcfce7;color:#166534;}
 .update{background:#fef9c3;color:#854d0e;}
 .delete{background:#fee2e2;color:#991b1b;}
-
-/* MODAL */
 .modal{
   position:fixed;
   inset:0;
@@ -158,6 +148,32 @@ th{
   border-radius:20px;
   padding:25px;
 }
+.diff-item{
+  padding:14px;
+  border:1px solid var(--border);
+  border-radius:14px;
+  margin-bottom:12px;
+  background:#f9fafb;
+}
+.diff-key{
+  font-weight:800;
+  margin-bottom:6px;
+}
+.old-value{color:#dc2626;font-weight:700;}
+.new-value{color:#16a34a;font-weight:700;}
+.diff-grid{
+  display:grid;
+  grid-template-columns:1fr 1fr;
+  gap:12px;
+}
+.value-box{
+  background:#0f172a;
+  color:#fff;
+  padding:10px;
+  border-radius:10px;
+  font-size:13px;
+  overflow:auto;
+}
 pre{
   background:#0f172a;
   color:#22c55e;
@@ -166,20 +182,6 @@ pre{
   font-size:12px;
   overflow:auto;
 }
-.close{
-  float:right;
-  cursor:pointer;
-  font-weight:900;
-}
-
-/* RESPONSIVO */
-@media(max-width:900px){
-  .grid{grid-template-columns:repeat(2,1fr);}
-}
-@media(max-width:600px){
-  .grid{grid-template-columns:1fr;}
-  .header h1{font-size:24px;}
-}
 </style>
 </head>
 
@@ -187,28 +189,16 @@ pre{
 
 <div class="header">
   <h1>🕓 Histórico de Alterações</h1>
-  <p>Auditoria completa de fichas técnicas e impostos</p>
+  <p>Últimos 30 dias por padrão • Auditoria completa</p>
 </div>
 
 <div class="container">
 
 <div class="grid">
-  <div class="stat">
-    <h3>Total Registros</h3>
-    <span id="total">0</span>
-  </div>
-  <div class="stat">
-    <h3>Inserts</h3>
-    <span id="totalInsert">0</span>
-  </div>
-  <div class="stat">
-    <h3>Updates</h3>
-    <span id="totalUpdate">0</span>
-  </div>
-  <div class="stat">
-    <h3>Deletes</h3>
-    <span id="totalDelete">0</span>
-  </div>
+  <div class="stat"><h3>Total</h3><span id="total">0</span></div>
+  <div class="stat"><h3>Inserts</h3><span id="totalInsert">0</span></div>
+  <div class="stat"><h3>Updates</h3><span id="totalUpdate">0</span></div>
+  <div class="stat"><h3>Deletes</h3><span id="totalDelete">0</span></div>
 </div>
 
 <div class="filters">
@@ -227,6 +217,9 @@ pre{
     <option value="DELETE">DELETE</option>
   </select>
 
+  <input type="date" id="dataInicio">
+  <input type="date" id="dataFim">
+
   <button onclick="carregar()">Filtrar</button>
 </div>
 
@@ -239,7 +232,7 @@ pre{
   <th>Operação</th>
   <th>ID</th>
   <th>Usuário</th>
-  <th>Detalhes</th>
+  <th>Ações</th>
 </tr>
 </thead>
 <tbody id="tbody"></tbody>
@@ -251,7 +244,7 @@ pre{
 <div class="modal" id="modal">
   <div class="modal-content">
     <span class="close" onclick="modal.style.display='none'">X</span>
-    <h3>Detalhes da Alteração</h3>
+    <h3>Detalhes</h3>
     <div id="conteudo"></div>
   </div>
 </div>
@@ -260,30 +253,34 @@ pre{
 const SUPABASE_URL = "https://dxkszikemntfusfyrzos.supabase.co";
 const SUPABASE_ANON_KEY = "sb_publishable_NNFvdfSXgOdGGVcSbphbjQ_brC3_9ed";
 
-
 const sb = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+
+function hojeMenos30(){
+  const d=new Date();
+  d.setDate(d.getDate()-30);
+  return d.toISOString();
+}
 
 async function carregar(){
 
   let query = sb.from("historico_alteracao_fichas")
     .select("*")
-    .order("alterado_em", {ascending:false})
+    .gte("alterado_em", hojeMenos30())
+    .order("alterado_em",{ascending:false})
     .limit(500);
 
-  if(fTabela.value) query = query.eq("tabela", fTabela.value);
-  if(fOperacao.value) query = query.eq("operacao", fOperacao.value);
+  if(dataInicio.value) query=query.gte("alterado_em", dataInicio.value);
+  if(dataFim.value) query=query.lte("alterado_em", dataFim.value+" 23:59:59");
+  if(fTabela.value) query=query.eq("tabela", fTabela.value);
+  if(fOperacao.value) query=query.eq("operacao", fOperacao.value);
 
-  const {data,error} = await query;
-
-  if(error){
-    alert(error.message);
-    return;
-  }
+  const {data,error}=await query;
+  if(error){ alert(error.message); return; }
 
   tbody.innerHTML="";
-  total.innerText = data.length;
+  total.innerText=data.length;
 
-  let ins=0, upd=0, del=0;
+  let ins=0,upd=0,del=0;
 
   data.forEach(item=>{
     if(item.operacao==="INSERT") ins++;
@@ -297,7 +294,10 @@ async function carregar(){
       <td><span class="badge ${item.operacao.toLowerCase()}">${item.operacao}</span></td>
       <td>${item.registro_id || "-"}</td>
       <td>${item.usuario || "-"}</td>
-      <td><button onclick='ver(${JSON.stringify(item)})'>Ver</button></td>
+      <td>
+        <button onclick='ver(${JSON.stringify(item)})'>Ver</button>
+        <button class="btn-restore" onclick="restaurar('${item.id}')">Restaurar</button>
+      </td>
     `;
     tbody.appendChild(tr);
   });
@@ -309,12 +309,60 @@ async function carregar(){
 
 function ver(item){
   modal.style.display="flex";
-  conteudo.innerHTML=`
-    <h4>ANTES</h4>
-    <pre>${JSON.stringify(item.dados_antes,null,2)}</pre>
-    <h4>DEPOIS</h4>
-    <pre>${JSON.stringify(item.dados_depois,null,2)}</pre>
-  `;
+
+  if(item.operacao==="UPDATE"){
+    let html="<h4>Campos Alterados</h4>";
+
+    Object.keys(item.dados_depois).forEach(k=>{
+      if(JSON.stringify(item.dados_antes[k])!==JSON.stringify(item.dados_depois[k])){
+        html+=`
+        <div class="diff-item">
+          <div class="diff-key">${k}</div>
+          <div class="diff-grid">
+            <div>
+              <div class="old-value">ANTES</div>
+              <div class="value-box">${formatar(item.dados_antes[k])}</div>
+            </div>
+            <div>
+              <div class="new-value">DEPOIS</div>
+              <div class="value-box">${formatar(item.dados_depois[k])}</div>
+            </div>
+          </div>
+        </div>
+        `;
+      }
+    });
+
+    conteudo.innerHTML=html;
+
+  } else {
+    const dados=item.dados_depois || item.dados_antes;
+    conteudo.innerHTML=`<pre>${JSON.stringify(dados,null,2)}</pre>`;
+  }
+}
+
+function formatar(v){
+  if(v===null || v===undefined) return "null";
+  if(typeof v==="object") return JSON.stringify(v,null,2);
+  return v;
+}
+
+async function restaurar(id){
+
+  const senha=prompt("Digite a senha para restaurar:");
+  if(senha!=="8486"){
+    alert("Senha incorreta.");
+    return;
+  }
+
+  const { error } = await sb.rpc("restaurar_historico", { p_id: id });
+
+  if(error){
+    alert(error.message);
+  }else{
+    alert("Restaurado com sucesso!");
+    carregar();
+  }
 }
 
 carregar();
