--- a/historico.html
+++ b/historico.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Histórico • CMV</title>
+<meta charset="UTF-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>Histórico • Auditoria Avançada</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800;900&display=swap" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
@@ -19,145 +19,73 @@
   --text:#0f172a;
   --muted:#64748b;
   --border:#e5e7eb;
-  --radius:20px;
+  --radius:18px;
   --shadow:0 20px 50px rgba(0,0,0,.12);
 }
 *{box-sizing:border-box}
 body{
   margin:0;
   font-family:Inter;
-  background:
-    radial-gradient(1000px 500px at 10% -10%, #eef2ff 0%, transparent 60%),
-    radial-gradient(900px 500px at 110% 10%, #ecfeff 0%, transparent 60%),
-    var(--bg);
+  background:var(--bg);
   color:var(--text);
-}
-.header{
-  padding:26px 22px 10px;
-  max-width:1200px;
-  margin:auto;
-}
-.header h1{
-  margin:0;
-  font-size:32px;
-  font-weight:900;
-}
-.header p{
-  margin:6px 0 0;
-  color:var(--muted);
-  font-weight:600;
 }
 .container{
   max-width:1200px;
   margin:auto;
-  padding:22px;
+  padding:30px;
 }
-.grid{
-  display:grid;
-  grid-template-columns:repeat(4, 1fr);
-  gap:20px;
-  margin-bottom:25px;
-}
-.stat{
-  background:var(--card);
-  border-radius:var(--radius);
-  border:1px solid var(--border);
-  box-shadow:var(--shadow);
-  padding:20px;
-  transition:.2s;
-}
-.stat:hover{
-  transform:translateY(-4px);
-}
-.stat h3{
-  margin:0;
-  font-size:14px;
-  color:var(--muted);
-}
-.stat span{
-  font-size:26px;
-  font-weight:900;
-}
-.filters{
-  background:var(--card);
-  padding:18px;
-  border-radius:var(--radius);
-  box-shadow:var(--shadow);
-  display:flex;
-  flex-wrap:wrap;
-  gap:12px;
-  margin-bottom:25px;
-}
-select,input{
-  padding:10px;
-  border:1px solid var(--border);
-  border-radius:10px;
-}
-button{
-  border:none;
-  padding:10px 18px;
-  border-radius:12px;
-  font-weight:700;
-  cursor:pointer;
-  display:inline-flex;
-  align-items:center;
-  gap:6px;
-  transition:.2s;
-}
-.btn-primary{
-  background:linear-gradient(135deg,var(--primary),var(--primary-dark));
-  color:#fff;
-}
-.btn-primary:hover{
-  transform:translateY(-2px);
-}
-.btn-view{
-  background:#eef2ff;
-  color:var(--primary);
-}
-.btn-view:hover{
-  background:#dbeafe;
-}
-.btn-restore{
-  background:linear-gradient(135deg,#ef4444,#b91c1c);
-  color:#fff;
-}
-.btn-restore:hover{
-  transform:translateY(-2px);
-}
-.table-wrap{
-  background:var(--card);
-  border-radius:var(--radius);
-  box-shadow:var(--shadow);
-  overflow:auto;
-}
+h1{margin:0 0 8px;font-weight:900}
+p{margin:0 0 25px;color:var(--muted)}
+
 table{
   width:100%;
   border-collapse:collapse;
+  background:#fff;
+  border-radius:var(--radius);
+  overflow:hidden;
+  box-shadow:var(--shadow);
 }
 th,td{
   padding:14px;
   border-bottom:1px solid var(--border);
   font-size:14px;
 }
-tr:hover{
-  background:#f1f5f9;
-}
 th{
+  background:#f1f5f9;
   text-align:left;
   font-size:12px;
-  color:var(--muted);
   text-transform:uppercase;
+  color:var(--muted);
 }
+tr:hover{background:#f8fafc}
+
 .badge{
-  padding:6px 10px;
+  padding:5px 10px;
   border-radius:999px;
   font-size:11px;
   font-weight:800;
 }
-.insert{background:#dcfce7;color:#166534;}
-.update{background:#fef9c3;color:#854d0e;}
-.delete{background:#fee2e2;color:#991b1b;}
+.insert{background:#dcfce7;color:#166534}
+.update{background:#fef9c3;color:#854d0e}
+.delete{background:#fee2e2;color:#991b1b}
+
+.btn{
+  padding:8px 14px;
+  border-radius:10px;
+  border:none;
+  cursor:pointer;
+  font-weight:700;
+  display:inline-flex;
+  align-items:center;
+  gap:6px;
+  transition:.2s;
+}
+.btn-view{background:#e0f2fe;color:#0369a1}
+.btn-view:hover{background:#bae6fd}
+.btn-restore{background:linear-gradient(135deg,#ef4444,#b91c1c);color:#fff}
+.btn-restore:hover{transform:translateY(-2px)}
+.btn-close{background:#111827;color:#fff}
+.btn-group{display:flex;gap:10px;flex-wrap:wrap}
 
 .modal{
   position:fixed;
@@ -175,35 +103,35 @@ th{
   overflow:auto;
   border-radius:20px;
   padding:25px;
-  animation:fadeIn .2s ease;
+  box-shadow:0 30px 60px rgba(0,0,0,.25);
 }
-@keyframes fadeIn{
-  from{transform:scale(.95);opacity:0}
-  to{transform:scale(1);opacity:1}
+.modal-header{
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  margin-bottom:20px;
 }
-
 .diff-item{
-  padding:14px;
   border:1px solid var(--border);
-  border-radius:14px;
+  border-radius:12px;
+  padding:14px;
   margin-bottom:12px;
-  background:#f9fafb;
 }
-.diff-key{font-weight:800;margin-bottom:6px}
-.old-value{color:#dc2626;font-weight:700}
-.new-value{color:#16a34a;font-weight:700}
-.diff-grid{
-  display:grid;
-  grid-template-columns:1fr 1fr;
-  gap:12px;
-}
+.old{color:#dc2626;font-weight:700}
+.new{color:#16a34a;font-weight:700}
 .value-box{
   background:#0f172a;
   color:#fff;
-  padding:10px;
-  border-radius:10px;
+  padding:8px;
+  border-radius:8px;
   font-size:13px;
-  overflow:auto;
+}
+.linked{
+  margin-top:25px;
+  padding:14px;
+  border:1px dashed var(--border);
+  border-radius:12px;
+  background:#f9fafb;
 }
 .toast{
   position:fixed;
@@ -211,9 +139,8 @@ th{
   right:20px;
   background:#111827;
   color:#fff;
-  padding:14px 18px;
-  border-radius:12px;
-  box-shadow:0 20px 40px rgba(0,0,0,.3);
+  padding:12px 18px;
+  border-radius:10px;
   display:none;
 }
 </style>
@@ -221,70 +148,40 @@ th{
 
 <body>
 
-<div class="header">
-  <h1>🕓 Histórico de Alterações</h1>
-  <p>Auditoria avançada com restauração inteligente</p>
-</div>
-
 <div class="container">
+<h1>🕓 Histórico de Alterações</h1>
+<p>Auditoria avançada com detecção de alterações vinculadas</p>
 
-<div class="grid">
-  <div class="stat"><h3>Total</h3><span id="total">0</span></div>
-  <div class="stat"><h3>Inserts</h3><span id="totalInsert">0</span></div>
-  <div class="stat"><h3>Updates</h3><span id="totalUpdate">0</span></div>
-  <div class="stat"><h3>Deletes</h3><span id="totalDelete">0</span></div>
-</div>
-
-<div class="filters">
-  <select id="fTabela">
-    <option value="">Todas Tabelas</option>
-    <option value="buffet">Buffet</option>
-    <option value="buffet_itens">Buffet Itens</option>
-    <option value="produtos">Produtos</option>
-    <option value="impostos">Impostos</option>
-  </select>
-
-  <select id="fOperacao">
-    <option value="">Todas Operações</option>
-    <option value="INSERT">INSERT</option>
-    <option value="UPDATE">UPDATE</option>
-    <option value="DELETE">DELETE</option>
-  </select>
-
-  <button class="btn-primary" onclick="carregar()">🔎 Filtrar</button>
-</div>
-
-<div class="table-wrap">
 <table>
 <thead>
 <tr>
-  <th>Data</th>
-  <th>Tabela</th>
-  <th>Operação</th>
-  <th>ID</th>
-  <th>Usuário</th>
-  <th>Ações</th>
+<th>Data</th>
+<th>Tabela</th>
+<th>Operação</th>
+<th>ID</th>
+<th>Ações</th>
 </tr>
 </thead>
 <tbody id="tbody"></tbody>
 </table>
 </div>
 
-</div>
-
 <div class="modal" id="modal">
-  <div class="modal-content">
-    <h3>Detalhes da Alteração</h3>
-    <div id="conteudo"></div>
-  </div>
+<div class="modal-content">
+<div class="modal-header">
+<h3>Detalhes da Alteração</h3>
+<button class="btn btn-close" onclick="fechar()">✖ Fechar</button>
+</div>
+<div id="conteudo"></div>
+</div>
 </div>
 
 <div class="toast" id="toast"></div>
 
 <script>
-const SUPABASE_URL = "https://dxkszikemntfusfyrzos.supabase.co";
-const SUPABASE_ANON_KEY = "sb_publishable_NNFvdfSXgOdGGVcSbphbjQ_brC3_9ed";
-const sb = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+const SUPABASE_URL="https://dxkszikemntfusfyrzos.supabase.co";
+const SUPABASE_ANON_KEY="sb_publishable_NNFvdfSXgOdGGVcSbphbjQ_brC3_9ed";
+const sb=supabase.createClient(SUPABASE_URL,SUPABASE_ANON_KEY);
 
 function toast(msg){
   const t=document.getElementById("toast");
@@ -293,82 +190,95 @@ function toast(msg){
   setTimeout(()=>t.style.display="none",3000);
 }
 
+function fechar(){
+  modal.style.display="none";
+}
+
 async function carregar(){
-  const {data,error}=await sb
-    .from("historico_alteracao_fichas")
+  const {data}=await sb.from("historico_alteracao_fichas")
     .select("*")
     .order("alterado_em",{ascending:false})
     .limit(500);
 
-  if(error){ toast(error.message); return; }
-
   tbody.innerHTML="";
-  total.innerText=data.length;
-
-  let ins=0,upd=0,del=0;
-
   data.forEach(item=>{
-    if(item.operacao==="INSERT") ins++;
-    if(item.operacao==="UPDATE") upd++;
-    if(item.operacao==="DELETE") del++;
-
     const tr=document.createElement("tr");
     tr.innerHTML=`
       <td>${new Date(item.alterado_em).toLocaleString()}</td>
       <td>${item.tabela}</td>
       <td><span class="badge ${item.operacao.toLowerCase()}">${item.operacao}</span></td>
       <td>${item.registro_id}</td>
-      <td>${item.usuario || "-"}</td>
-      <td>
-        <button class="btn-view" onclick='ver(${JSON.stringify(item)})'>👁 Ver</button>
-        <button class="btn-restore" onclick="restaurar('${item.id}')">♻ Restaurar</button>
+      <td class="btn-group">
+        <button class="btn btn-view" onclick='ver(${JSON.stringify(item)})'>👁 Ver</button>
+        <button class="btn btn-restore" onclick="restaurar('${item.id}')">♻ Restaurar</button>
       </td>
     `;
     tbody.appendChild(tr);
   });
-
-  totalInsert.innerText=ins;
-  totalUpdate.innerText=upd;
-  totalDelete.innerText=del;
 }
 
-function ver(item){
+async function ver(item){
   modal.style.display="flex";
   let html="";
+
   if(item.operacao==="UPDATE"){
     Object.keys(item.dados_depois).forEach(k=>{
       if(JSON.stringify(item.dados_antes[k])!==JSON.stringify(item.dados_depois[k])){
         html+=`
         <div class="diff-item">
-          <div class="diff-key">${k}</div>
-          <div class="diff-grid">
-            <div>
-              <div class="old-value">ANTES</div>
-              <div class="value-box">${item.dados_antes[k]}</div>
-            </div>
-            <div>
-              <div class="new-value">DEPOIS</div>
-              <div class="value-box">${item.dados_depois[k]}</div>
-            </div>
-          </div>
+          <strong>${k}</strong><br>
+          <span class="old">ANTES:</span>
+          <div class="value-box">${item.dados_antes[k]}</div>
+          <span class="new">DEPOIS:</span>
+          <div class="value-box">${item.dados_depois[k]}</div>
         </div>`;
       }
     });
   }else{
-    html=`<pre>${JSON.stringify(item.dados_depois || item.dados_antes,null,2)}</pre>`;
+    html+=`<pre>${JSON.stringify(item.dados_depois||item.dados_antes,null,2)}</pre>`;
   }
+
+  const {data:linked}=await sb.from("historico_alteracao_fichas")
+    .select("*")
+    .eq("alterado_em",item.alterado_em);
+
+  if(linked.length>1){
+    html+=`<div class="linked">
+      <strong>⚠ Alterações vinculadas detectadas (${linked.length})</strong><br><br>`;
+    linked.forEach(l=>{
+      html+=`${l.tabela} • ${l.operacao}<br>`;
+    });
+    html+=`<br>
+      <button class="btn btn-restore" onclick="restaurarGrupo('${item.alterado_em}')">♻ Restaurar TODAS vinculadas</button>
+    </div>`;
+  }
+
   conteudo.innerHTML=html;
 }
 
 async function restaurar(id){
-  const senha=prompt("Digite a senha:");
-  if(senha!=="8486"){ toast("Senha incorreta"); return; }
+  const senha=prompt("Senha:");
+  if(senha!=="8486"){toast("Senha incorreta");return;}
 
-  toast("Restaurando...");
-  const {error}=await sb.rpc("restaurar_historico",{p_id:id});
+  await sb.rpc("restaurar_historico",{p_id:id});
+  toast("Restaurado com sucesso");
+  carregar();
+}
 
-  if(error){ toast(error.message); }
-  else{ toast("Registro restaurado com sucesso!"); carregar(); }
+async function restaurarGrupo(dataHora){
+  const senha=prompt("Senha:");
+  if(senha!=="8486"){toast("Senha incorreta");return;}
+
+  const {data}=await sb.from("historico_alteracao_fichas")
+    .select("id")
+    .eq("alterado_em",dataHora);
+
+  for(const r of data){
+    await sb.rpc("restaurar_historico",{p_id:r.id});
+  }
+
+  toast("Grupo restaurado com sucesso");
+  carregar();
 }
 
 carregar();
